2007-05-10 Igor Zelmanovich <igorz@mainsoft.com>

	* Page.cs: ExecuteRegisteredAsyncTasks:
	implimentation for TARGET_JVM doesn't use WaitHandle.WaitAll, but WaitOne

2007-05-09  Vladimir Krasnov  <vladimirk@mainsoft.com>

	* HtmlTextWriter.cs: used classes instead of sctrucs in TARGET_JVM for
	AddedTag, AddedStyle and AddedAttr members
	* TemplateControl.jvm.cs: refactored CachedString method

2007-05-03 Igor Zelmanovich <igorz@mainsoft.com>

	* AttributeCollection.cs:
	* DataBindingHandlerAttribute.cs:
	* HtmlTextWriter.cs:
	* PartialCachingControl.cs:
	* TemplateControl.cs:
	* TemplateControl.jvm.cs:
	* XPathBinder.cs:						
	added missing API.	

2007-05-03 Igor Zelmanovich <igorz@mainsoft.com>

	* CssStyleCollection.cs: optimization:
	used StringBuilder instead string to hold value.
	When added key that not exists in collection, value is recalculated by 
	appending required key to existing value.	

2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs: ResolveClientUrl: optimization.
	if basePath is the same as TemplateSourceDirectory 
	releativeUrl is returned as is.

2007-05-02 Igor Zelmanovich <igorz@mainsoft.com>

	* Control.cs:
	ResolveClientUrl considers TemplateSourceDirectory property.

2007-04-30 Konstantin Triger <kostat@mainsoft.com>

	* DataBinder.cs: When formatting, threat empty string as null.

2007-04-19  Gert Driesen  <drieseng@users.sourceforge.net>

	* TemplateParser.cs: On 2.0 profile, allow namespace in ClassName
	attribute. Fixes part of bug #81399.

2007-04-11  Marek Habersack  <mhabersack@novell.com>

	* Page.cs: check whether control passed to
	RegisterRequiresPostBack implements the IPostBackDataHandler
	interface.

2007-04-06  Marek Habersack  <mhabersack@novell.com>

	* ClientScriptManager.cs: render the 'type' attribute in
	WriteScript and do not render the 'language' attribute when in
	NET_2_0+ mode.

	* Page.cs: defaults for ViewStateEncrptionMode and AsyncTimeout
	are read from the pages section, if found.
